Overlays are now positioned correctly by their z-index.

--- a/themes/newtheme/css/_gui-panel.css
+++ b/themes/newtheme/css/_gui-panel.css
@@ -219,6 +219,16 @@
                 transition: all ease-out .15s;
                 opacity: 0.0;
                 transform: translateY(5%);
+
+                &__empty-message {
+                    position: absolute;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    width: 100%;
+                    text-align: center;
+                    font-size: 0.75rem;
+                    color: rgb(45, 45, 45);
+                }
     
                 &__content {
                     position: absolute;
